Center content on page and set layout for boxes

--- a/main.css
+++ b/main.css
@@ -19,6 +19,16 @@ body {
 header {
 	background-color: #5f419a;
 	color: #ffffff;
+	text-align: center;
+}
+
+main {
+	text-align: center;
+}
+
+section {
+	display: flex;
+	justify-content: space-around;
 }
 
 .box {
