--- a/main.css
+++ b/main.css
@@ -27,9 +27,14 @@ main {
 	text-align: center;
 }
 
+main h2 {
+	font-size: 1rem;
+}
+
 section {
 	display: flex;
 	justify-content: space-around;
+	font-size: 3.5rem;
 }
 
 .box {
