--- a/main.css
+++ b/main.css
@@ -21,24 +21,32 @@ header {
 	background-color: #5f419a;
 	color: #ffffff;
 	text-align: center;
+	padding: 5%;
 }
 
 main {
 	text-align: center;
+	padding: 0 2%;
 }
 
 main h2 {
 	font-size: 1rem;
+	padding: 1%;
 }
 
 section {
 	display: flex;
 	justify-content: space-around;
+	flex-wrap: wrap;
 	font-size: 3.5rem;
+	padding: 2%;
 }
 
 .box {
 	border: 3px #5f419a solid;
+	width: 50%;
+	padding: 3%;
+	margin: 3%;
 }
 
 #box1 {
@@ -51,4 +59,11 @@ section {
 
 #box3 {
 	background-color: #add037;
+}
+
+@media (min-width: 600px) {
+	.box {
+		width: 15%;
+		margin: 0;
+	}
 }
